<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearlayout_1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/background_stretch"
            android:background="@color/colorPrimary">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:src="@drawable/ic_logo"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlayout_2"
            android:layout_below="@id/linearlayout_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/login_button_margins_top"
                android:background="@drawable/button"
                android:backgroundTint="#4267B2"
                android:drawableStart="@drawable/ic_facebook_color"
                android:drawablePadding="@dimen/drawable_padding"
                android:text="@string/Loginbutton_1"
                android:fontFamily="@font/neosansregular"
                android:textSize="@dimen/drawable_padding"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:padding="@dimen/overall_content_padding"/>

            <Button
                android:id="@+id/button_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/login_button_margins_top"
                android:background="@drawable/button"
                android:backgroundTint="#4285F4"
                android:drawableStart="@drawable/ic_google_color"
                android:drawablePadding="@dimen/drawable_padding"
                android:text="@string/Loginbutton_2"
                android:fontFamily="@font/neosansregular"
                android:textSize="@dimen/drawable_padding"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:padding="@dimen/overall_content_padding"/>

            <Button
                android:id="@+id/button_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/login_button_margins_top"
                android:text="@string/terms"
                android:fontFamily="@font/neosansregular"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textColor="@color/colorGrey"
                android:gravity="center"
                android:background="@null" />

        </LinearLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>